# orkney

./: Cargo.toml  README.md  index.html  shell.nix
client/: Cargo.toml
client/src/: inbox.rs  main.rs  outbox.rs
server/: Cargo.toml
server/src/: main.rs  state.rs  topology.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
