[workspace]
resolver = "2"
members = [
  "client", "server", "shared",
]

[profile.native-dev]
inherits = "dev"

[profile.native-dev.package."*"]
opt-level = 3

[profile.web-dev]
inherits = "dev"

[profile.web-dev.package."*"]
opt-level = "z"
codegen-units = 1

[profile.web-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
