[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.12.1" }
wasm-bindgen = "0.2.90"
js-sys = "0.3"
web-sys = { version = "0.3.22", features = ["MessageEvent", "WebSocket", "BinaryType"] }
bincode = "1.3.3"
bevy_egui = "0.24.0"
