[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
futures-util = { version = "0.3", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bincode = "1.3.3"
