[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
matchbox_signaling = "0.8.0"
matchbox_protocol = { version = "0.8.0", features = ["json"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
