[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.6.20"
tokio = "1.0"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
matchbox_signaling = "0.8.0"
matchbox_protocol = "0.8.0"
async-trait = "0.1"
serde = "1.0"
futures = "0.3"
